# epp_final_project_sbp

./: CHANGES.md  CITATION  README.md  environment.yml  project_specifics.yaml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: epp_final_project_sbp.tex  epp_final_project_sbp_pres.tex  task_paper.py
src/epp_final_project_sbp/: __init__.py  config.py
src/epp_final_project_sbp/Sandbox/: Analysis_random_forests.ipynb  Analysis_sportsbet_sandbox.ipynb  Features.csv  scraping_info.yaml  ~$data_train.xlsx
src/epp_final_project_sbp/analysis/: data_preparation.py  model_build.py  model_selection.py  predict.py  task_analysis.py  task_model.py  task_model_selection.py
src/epp_final_project_sbp/data/: Features.xlsx  project_specifics.yaml
src/epp_final_project_sbp/data_management/: __init__.py  clean_data.py  data_info.yaml  feature_creation.py  feature_engineering.py  task_data_management.py  task_feature_engineering.py  task_web_scraping.py  web_scraper.py
src/epp_final_project_sbp/final/: __init__.py  plot.py  task_data_exploration_plots.py  task_final.py  task_simulation_result_plots.py
src/epp_final_project_sbp/simulation/: betting_strategies.py  simulation.py  task_simulation.py
tests/analysis/: test_data_preparation.py  test_model.py  test_model_built.py  test_predict.py  test_web_scraping.py
tests/data_management/: Fixture_input_data_feature_engineering.csv  Fixture_output_data_engineering.csv  test_clean_data.py  test_feature_engineering.py
tests/webscraping/: test_web_scraping.py
(+2 files in other folders)
