[metadata]
name = epp_final_project_sbp
description = EPP_final_project_sbp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fotfake1/epp_final_project_sbp
author = Luis Enrique Kaiser
author_email = s6lukais@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Fotfake1/epp_final_project_sbp
    Documentation = https://github.com/Fotfake1/epp_final_project_sbp
    Github = https://github.com/Fotfake1/epp_final_project_sbp
    Tracker = https://github.com/Fotfake1/epp_final_project_sbp/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_final_project_sbp/_version.py
